--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ https://templatemo.com/tm-528-elegance
                     <div class="welcome-box">
                         <span class="welcome-first animate" data-animate="fadeInUp">Hello, welcome to</span>
                         <h1 class="welcome-title animate" data-animate="fadeInUp">Portfolio</h1>
-                        <p class="animate" data-animate="fadeInUp">My Name ist <strong> Sylvain Eddy Feulefack Nguesson</strong> but friends call me <strong>Eddylian</strong>.I am <strong>a Fullstack-developer</strong> and <strong>Freelancer</strong></p>
+                        <p class="animate" data-animate="fadeInUp">My Name is <strong> Sylvain Eddy Feulefack Nguesson</strong> but friends call me <strong>Eddylian</strong>.I am <strong>a Fullstack-developer</strong> and <strong>Freelancer</strong></p>
                         <div class="scroll-down next-section animate data-animate=" fadeInUp ""><img src="images/mouse-scroll.png" alt=""><span>Scroll Down</span></div>
                     </div>
                 </div>
