--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ https://templatemo.com/tm-528-elegance
         </header>
 
         <video autoplay muted loop id="myVideo">
-          <source src="images/video-bg.mp4" type="video/mp4">
+          <source src="images/Vid.mp4" type="video/mp4">
         </video>
 
         <div id="fullpage" class="fullpage-default">
@@ -492,10 +492,12 @@ https://templatemo.com/tm-528-elegance
         <div id="social-icons">
             <div class="text-right">
                 <ul class="social-icons">
-                    <li><a href="#" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                    <li>
+                        <a href="#" title="Github"><i class="fa fa-github" aria-hidden="true"></i>
+                        </a>
+                    </li>
                     <li><a href="#" title="Twitter"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="#" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="#" title="Instagram"><i class="fa fa-behance"></i></a></li>
                 </ul>
             </div>
         </div>
