--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@ https://templatemo.com/tm-528-elegance
                                 </div>
                                 <div class="col-md-6 animate" data-animate="fadeInUp">
                                     <form id="ajax-contact" action="mailto:sylvaineddy22@gmail.com"
-                                          crossorigin="anonymous" method="get" enctype="text/plain">
+                                          crossorigin="anonymous"  method="POST" data-netlify="true" enctype="text/plain">
                                         <div class="input-field">
                                             <input type="text" class="form-control" name="name" id="name" required
                                                    placeholder="Name">
@@ -535,6 +535,10 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <button class="btn" type="submit">Submit</button>
                                     </form>
+                                    <!--<form id="ajax-contact" action="mailto:sylvaineddy22@gmail.com"
+                                          crossorigin="anonymous" method="get"  enctype="text/plain">
+                                    -->
+
                                     <div id="form-messages" class="mt-3"></div>
                                 </div>
                             </div>
