--- a/index.html
+++ b/index.html
@@ -520,7 +520,8 @@ https://templatemo.com/tm-528-elegance
                                 </div>
                                 <div class="col-md-6 animate" data-animate="fadeInUp">
                                     <form id="ajax-contact" action="mailto:sylvaineddy22@gmail.com"
-                                          crossorigin="anonymous"  method="POST" data-netlify="true" enctype="text/plain">
+                                          netlify-honeypot="bot-field" method="POST" data-netlify="true"
+                                          data-netlify-recaptcha="true" enctype="text/plain">
                                         <div class="input-field">
                                             <input type="text" class="form-control" name="name" id="name" required
                                                    placeholder="Name">
