--- a/index.html
+++ b/index.html
@@ -81,8 +81,6 @@ https://templatemo.com/tm-528-elegance
                     <p class="animate" data-animate="fadeInUp">My Name is <strong> Sylvain Eddy Feulefack
                         Nguesson</strong> but friends call me <strong>Eddylian</strong>.I am <strong>a
                         Fullstack-developer</strong> and <strong>Freelancer</strong></p>
-                    <div class="scroll-down next-section animate data-animate" fadeInUp=""><img
-                            src="images/mouse-scroll.png" alt=""><span>Scroll Down</span></div>
                 </div>
             </div>
         </div>
@@ -328,7 +326,7 @@ https://templatemo.com/tm-528-elegance
                 <div class="row justify-content-center">
                     <div class="col-md-8 wide-col-laptop">
                         <div class="title-block animate" data-animate="fadeInUp">
-                            <span><h2>My Work</h2></span>
+                            <span>My Work</span>
                         </div>
                         <div class="gallery-section">
                             <div class="gallery-list owl-carousel">
@@ -498,13 +496,13 @@ https://templatemo.com/tm-528-elegance
             <div class="section-inner">
                 <div class="row justify-content-center">
                     <div class="col-md-7 wide-col-laptop">
-                        <div class="title-block animate" data-animate="fadeInUp">
+                        <div class="title-block animated fadeInUp" data-animate="fadeInUp">
                             <span>Contact</span>
                             <h2>Get In Touch!</h2>
                         </div>
                         <div class="contact-section">
                             <div class="row">
-                                <div class="col-md-6 animate" data-animate="fadeInUp">
+                                <div class="col-md-6 animated fadeInUp" data-animate="fadeInUp">
                                     <div class="contact-box">
                                         <div class="contact-row">
                                             <i class="fa fa-map-marker"></i> Kurtschumacher-Straße 14-2-5 <br>67663
@@ -518,27 +516,25 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-6 animate" data-animate="fadeInUp">
-                                    <form id="ajax-contact" action="mailto:sylvaineddy22@gmail.com"
-                                          netlify-honeypot="bot-field" method="POST" data-netlify="true"
-                                          data-netlify-recaptcha="true" enctype="text/plain">
+                                <div class="col-md-6 animated fadeInUp" data-animate="fadeInUp">
+                                    <form name="contact" id="ajax-contact"  method="post" action="#" data-netlify="true">
+
                                         <div class="input-field">
-                                            <input type="text" class="form-control" name="name" id="name" required
+                                            <input type="text" class="form-control" name="name" id="name"
+                                                   data-validate="Name is required"
                                                    placeholder="Name">
                                         </div>
                                         <div class="input-field">
-                                            <input type="email" class="form-control" name="email" id="email" required
+                                            <input type="email" class="form-control" name="email" id="email"
                                                    placeholder="Email">
                                         </div>
                                         <div class="input-field">
-                                            <textarea class="form-control" name="message" id="message" required
+                                            <textarea class="form-control" name="message" id="message"
                                                       placeholder="Message"></textarea>
                                         </div>
-                                        <button class="btn" type="submit">Submit</button>
+                                        <button class="btn" type="submit" value="Send Message">Submit</button>
                                     </form>
-                                    <!--<form id="ajax-contact" action="mailto:sylvaineddy22@gmail.com"
-                                          crossorigin="anonymous" method="get"  enctype="text/plain">
-                                    -->
+
 
                                     <div id="form-messages" class="mt-3"></div>
                                 </div>
@@ -554,17 +550,16 @@ https://templatemo.com/tm-528-elegance
         <div class="text-right">
             <ul class="social-icons">
                 <li>
-                    <a href="#" title="Github" href="https://github.com/EddylianOrigin?tab=repositories "><i
-                            class="fa fa-github " aria-hidden="true ">
-
+                    <a href="#" title="Github">
+                        <i class="fa fa-github" >
+                            ::before
                     </i>
                     </a>
                 </li>
-                <li><a href="# " title="Twitter "><i class="fa fa-twitter "></i></a></li>
-                <li><a href="# " title="Linkedin "><i class="fa fa-linkedin "></i></a></li>
             </ul>
         </div>
     </div>
+    ::after
 </div>
 
 <script src="js/jquery.js "></script>
@@ -582,10 +577,57 @@ https://templatemo.com/tm-528-elegance
 <script src="js/form.js "></script>
 
 <script src="js/custom.js "></script>
+<div id="fp-nav" class="fp-right" style="margin-top: -73.5px; display: block;">
+    <ul>
+        <li>
+            <a href="#slide01" class="">
+                <span class="fp-sr-only">slide01</span>
+                <span>
 
+                </span>
+            </a>
+        </li>
+        <li>
+            <a href="#slide02" class="">
+                <span class="fp-sr-only">slide02</span>
+                <span></span>
+            </a>
+        </li>
+        <li>
+            <a href="#slide03" class="">
+                <span class="fp-sr-only">slide03</span>
+                <span></span>
+            </a>
+        </li>
+        <li>
+            <a href="#slide04" class="">
+                <span class="fp-sr-only">slide04</span>
+                <span>
+
+                </span>
+            </a>
+        </li>
+        <li>
+            <a href="#slide05" class="">
+                <span class="fp-sr-only">slide05</span>
+                <span></span>
+            </a>
+        </li>
+        <li>
+            <a href="#slide06" class="">
+                <span class="fp-sr-only">slide06</span>
+                <span></span>
+            </a>
+        </li>
+        <li>
+            <a href="#slide07" class="active">
+                <span class="fp-sr-only">slide07</span>
+                <span></span>
+            </a>
+        </li>
+    </ul>
+</div>
 
 </body>
-
-</html>
 
 </html>
